--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-streamlit
+streamlit>=1.32.0
+pandas>=2.2.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+folium>=0.15.0
+streamlit-folium>=0.13.0
+shapely>=2.0.0
+openpyxl>=3.1.2
